fix: spotbugs warnings
- Use getDeclearedConstructor().newInstance() clause for Class<?> object